feat 714: add environmentAggregationSecurity key for tenant security and APIs security
