# daikoku/app/domain/SchemaDefinition.scala
@@ -246,6 +246,10 @@ object SchemaDefinition {
               resolve = _.value.aggregationApiKeysSecurity
             ),
             Field(
+              "environmentAggregationApiKeysSecurity",
+              OptionType(BooleanType),
+              resolve = _.value.environmentAggregationApiKeysSecurity), 
+            Field(
               "display",
               OptionType(StringType),
               resolve = _.value.display.name
@@ -958,6 +962,11 @@ object SchemaDefinition {
             "aggregationApiKeysSecurity",
             OptionType(BooleanType),
             resolve = _.value.aggregationApiKeysSecurity
+          ),
+          Field(
+            "environmentAggregationApiKeysSecurity",
+            OptionType(BooleanType),
+            resolve = _.value.environmentAggregationApiKeysSecurity
           ),
           Field("type", StringType, resolve = _.value.typeName)
         )
